immutable Monuments isEmpty method simplified